Adding page swapping

--- a/fr.html
+++ b/fr.html
@@ -838,13 +838,13 @@
             <span></span>
         </div>
         <ul class="nav-links">
-            <li><a href="#">Découvrez-nous</a></li>
+            <li><a href="#">À-propos</a></li>
             <li><a href="#">Expertise</a></li>
             <li><a href="#">Notre équipe</a></li>
         </ul> 
         <div class="lang-switch">
-                <span>EN</span>
-                <span>FR</span>
+                <a href="index.html"><span>EN</span></a>
+                <span style="background-color: #eddbc3; font-family: Acumin Pro Bold; height: 20px; width: 30px; text-align: center;">FR</span>
         </div>
     </nav>
 
