--- a/index.html
+++ b/index.html
@@ -997,8 +997,8 @@
             <li><a href="#">Our Team</a></li>
         </ul> 
         <div class="lang-switch">
-                <span>EN</span>
-                <span>FR</span>
+                <span style="background-color: #eddbc3; font-family: Acumin Pro Bold; height: 25px; width: 30px; text-align: center;">EN</span>
+                <a href="fr.html"><span>FR</span></a>
         </div>
     </nav>
 
