Fixing listing in en version.

--- a/index.html
+++ b/index.html
@@ -894,19 +894,16 @@
                 align-items: center;
             }
 
-            .services-list li::before {
-                content: "• ";
-            }
-
             .services-list li {
                 font-size: 1.3rem;
+                padding-left: 2.5vw;
             }
 
             .services-list {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                align-items: center;
+                align-items: start;
             }
 
             .call-to-action{
