--- a/index.html
+++ b/index.html
@@ -891,6 +891,8 @@
                 height: auto;
                 background: url('assets/image_7.jpg') no-repeat center;
                 background-size: contain;
+                background-size: 175%;
+                background-position: 25% center;
                 min-height: 45vh;
             }
 
