Text is corrected on all pages.

--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@
         }
 
         .section-1 h1 {
-            font-size: 4rem;
+            font-size: 4.5rem;
             margin-top: 10vh;
             text-transform: uppercase;
             color: #003853;
         }
 
         .section-1 h3 {
-            font-size: 2.25rem;
+            font-size: 2.5rem;
             text-transform: uppercase;
             margin-top: -2vh;
             color: #003853;
@@ -323,7 +323,8 @@
         }
 
         .p2-section-1-title{
-            height:30%
+            height:30%;
+            padding-bottom:3vh
         }
 
         .p2-section-1-text{
@@ -351,7 +352,7 @@
         .p2-section-1 h2{
             color: #003853;
             font-family: 'Acumin Pro Bold', sans-serif;
-            font-size: 2.5rem;
+            font-size: 3rem;
             font-weight: bold;
         }
 
@@ -501,7 +502,9 @@
         }
 
         .p3-section-1-title{
-            height:30%
+            height:30%;
+            font-size:3rem;
+            width:90%
         }
 
         .p3-section-1-img{
@@ -518,7 +521,7 @@
         
         .p3-section-1 p {
             font-size: 1.25rem;
-            line-height: 1.7rem;
+            line-height: 2rem;
             margin-bottom: 2vh;
             text-align:justify;
             text-justify: inter-word;
@@ -535,7 +538,7 @@
         .p3-section-1 h2{
             color: #003853;
             font-family: 'Acumin Pro Bold', sans-serif;
-            font-size:2.5rem;
+            font-size:3rem;
             font-weight: bold;
         }
 
@@ -876,7 +879,6 @@
 
             .p2-section-1-title{
                 height: 20%;
-                
             }
 
             .p2-section-1-title h2{
@@ -893,9 +895,13 @@
             }
 
             .p2-section-1-text p{
-                text-align: justify;
-                padding: 0;
-                text-justify: inter-word; 
+                font-size: 1.25rem;
+                line-height: 2rem;
+                margin-bottom: 2vh;
+                text-align:justify;
+                text-justify: inter-word;
+                font-family: 'Acumin Pro', sans-serif;
+                padding-right: 5%;
             }
 
             .p2-section-2-left{
