--- a/fr.html
+++ b/fr.html
@@ -10,7 +10,7 @@
     <title>MBC Website</title>
     <style>
         :root {
-            font-size: 0.9vw;
+            font-size: 1vw;
         }
         @font-face {
             font-family: 'Acumin Pro Bold';
@@ -200,11 +200,12 @@
         .section-2-text-div p{
             text-align: justify;
             text-justify: inter-word;
+            font-size: 1.1rem;
         }
 
         .h2-style{
             display:flex;
-            flex-direction:row;
+            flex-direction:column;
         }
 
         .section-3 {
@@ -245,7 +246,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            width: 30%;
+            width: 33%;
             height: 100%;
             padding: 2.5vh;
         }
@@ -255,7 +256,7 @@
             text-transform: uppercase;
             font-size: 1.15rem;
             color:#003853;
-            width: 90%;
+            width: 95%;
             padding-top: 2vh;
         }
 
@@ -446,7 +447,7 @@
             margin: 0;
             font-family: 'Acumin Pro Bold', sans-serif;
             font-size: 1.25rem;
-            line-height: 1.7rem;
+            line-height: 2rem;
             color: #003853;
         }
 
@@ -463,7 +464,7 @@
             position: absolute;
             font-size: 2rem;
             left: 0;
-            line-height: 1.7rem;
+            line-height: 2rem;
         }
 
         .call-to-action {
@@ -493,12 +494,13 @@
             height: 105vh;
             padding-top: 10vh;
             padding-bottom:12vh; 
+            width:100%
         }
 
         .p3-section-1-div{
             display:flex; 
             flex-direction: row; 
-            height:70%
+            height:70%;
         }
 
         .p3-section-1-title{
