--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
         /* Page 2 styles */
         .p2-section-1{
-            background-color: #f1f4fb;
+            background-color: #c7d0d5;
             color: #202529;
             height: 115vh;
             padding-top: 5%;
@@ -428,7 +428,7 @@
         }
 
         .services-content {
-            padding: 2vh;
+            padding: 2vh 0;
             width:100%;
             border-radius: 5px;
         }
@@ -488,7 +488,7 @@
         /* Page 3 */
 
         .p3-section-1{
-            background-color: #f1f4fb;
+            background-color: #c7d0d5;
             color: #202529;
             height: 105vh;
             padding-top: 10vh;
@@ -675,12 +675,19 @@
             background-color: #3f5c6c;
             color: white;
             text-align: center;
+            align-items: start;
+            display: flex;
+            flex-direction:column;
         }
 
         footer a {
             color: #ffffff;
             text-decoration: none;
             font-weight: bold;
+        }
+
+        footer p{
+            margin: 0;
         }
 
         footer a:hover {
@@ -731,6 +738,27 @@
 
         .lang-option:hover {
             background-color: #f0e0c0;
+        }
+
+        .linkedin-icon {
+            width: 30px;
+            height: 30px;
+            display: inline-block;
+            transition: transform 0.3s ease;
+        }
+
+        .linkedin-icon:hover {
+            transform: scale(1.1);
+        }
+
+        .icon-div{
+            display:flex;
+            flex-direction:row;
+            padding-bottom: 2vh;
+        }
+
+        .icon-div p{
+            margin-left: 2vw
         }
 
         @media (max-width: 600px) {
@@ -1442,8 +1470,15 @@
     
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 MBC. All Rights Reserved.</p>
-        <a href="https://www.linkedin.com/company/maisonbrison">LinkedIn</a>
+        <div class="icon-div">
+            <a href="https://www.linkedin.com/company/maisonbrison" target="_blank">
+                <img src="assets/linkedin_icon.svg" alt="LinkedIn" class="linkedin-icon">
+            </a>
+            <p>Contact</p>
+            <p>Terms of use</p>
+        </div>
+        <p>Copyright &copy; 2025 MaisonBrison Communications</p>
+        <p>All Rights Reserved.</p>
     </footer>
 </body>
 </html>
