Fixing text alignment issue

--- a/fr.html
+++ b/fr.html
@@ -391,6 +391,7 @@
         .ipo-description {
             font-family: 'Acumin Pro', sans-serif;
             font-size: 1.5rem;
+            text-align: left;
             color: #32e3f7; 
         }
 
