--- a/index.html
+++ b/index.html
@@ -390,6 +390,7 @@
         .ipo-description {
             font-family: 'Acumin Pro', sans-serif;
             font-size: 1.5rem;
+            text-align: left;
             color: #32e3f7; 
         }
 
