--- a/fr.html
+++ b/fr.html
@@ -159,8 +159,8 @@
             color: #202529;
             display:flex;
             flex-direction: row;
-            height: 95vh;
-            padding-top: 10vh;
+            height: auto;
+            padding: 10vh 0 ;
         }
 
         .section-2 h2 {
@@ -211,7 +211,7 @@
         .section-3 {
             background-color: #8cc6dd;
             color: #003853;
-            height: 125vh;
+            height: auto;
         }
 
         .section-3 h3 {
@@ -237,7 +237,7 @@
         
         .title-div{
             height:20%;
-            padding-top: 10vh;
+            padding-top: 5vh;
             width:100%
         }
 
@@ -268,6 +268,7 @@
         .contact-us-div{
             height:35%;
             padding-bottom: 3vh;
+            padding-top: 3vh;
         }
 
         .contact-us-title{
@@ -312,9 +313,9 @@
         .p2-section-1{
             background-color: #f1f4fb;
             color: #202529;
-            height: 115vh;
-            padding-top: 5%;
-            padding-bottom: 7%; 
+            height: auto;
+            padding-top: 7vh;
+            padding-bottom: 10vh; 
         }
 
         .p2-section-1-div{
@@ -492,9 +493,9 @@
         .p3-section-1{
             background-color: #f1f4fb;
             color: #202529;
-            height: 105vh;
-            padding-top: 10vh;
-            padding-bottom:12vh; 
+            height: auto;
+            padding-top: 7vh;
+            padding-bottom:10vh; 
             width:100%
         }
 
@@ -502,6 +503,7 @@
             display:flex; 
             flex-direction: row; 
             height:70%;
+            margin-top:5vh;
         }
 
         .p3-section-1-title{
@@ -648,7 +650,7 @@
 
         .divider {
             border: none;
-            border-top: 2px solid #d6d8db;
+            border-top: 3px solid #d6d8db;
             margin: 5vh 0 2vh 0;
             width:75%;
             transition: margin-top 0.3s ease;
