Fixing nav placement

--- a/fr.html
+++ b/fr.html
@@ -30,13 +30,14 @@
             position: relative;
             display: flex;
             justify-content: space-between;
-            align-items: center;
+            align-items: end;
             padding: 2.5vh 5vw;
             background-color: #ffffff;
             border-bottom: 2px solid #f1f4fb;
             height: 25vh;
             min-height: 10vh;
             width:100%;
+            padding-bottom:4vh;
         }
 
         nav .logo {
@@ -774,6 +775,7 @@
 
             nav {
                 padding: 10px;
+                align-items: center;
             }
 
             nav ul {
