--- a/fr.html
+++ b/fr.html
@@ -31,10 +31,10 @@
             display: flex;
             justify-content: space-between;
             align-items: end;
-            padding: 2.5vh 5vw;
+            padding: 0 2.5vh 5vw 5vw;
             background-color: #ffffff;
             border-bottom: 2px solid #f1f4fb;
-            height: 25vh;
+            height: 20vh;
             min-height: 10vh;
             width:100%;
             padding-bottom:4vh;
@@ -42,6 +42,7 @@
 
         nav .logo {
             width: 20%;
+            padding-bottom: 1vh;
         }
 
         nav ul {
@@ -129,7 +130,7 @@
 
         .section-1 {
             background-image: url('assets/image_1.jpg');
-            background-size: cover;
+            background-size: 115%;
             background-position: center;
             background-repeat: no-repeat;
             color: #ffffff;
@@ -510,7 +511,7 @@
         .p3-section-1-title{
             height:30%;
             font-size:3rem;
-            width:90%
+            width:80%
         }
 
         .p3-section-1-img{
@@ -567,7 +568,8 @@
 
         .section-text {
             font-family: 'Acumin Pro Bold', sans-serif;
-            font-size: 1.6rem;
+            font-size: 2rem;
+            padding-left:2vw;
             line-height: 2rem;
             color: #ffffff;
             margin: 0;
@@ -577,6 +579,14 @@
             justify-content: center;
             align-content: center;
         }
+
+        .text-div-container{
+            width:50%; 
+            height: 100%; 
+            display: flex; 
+            justify-content: center;
+        }
+
 
         /* Section 3 */
         .p3-section-3 {
@@ -683,6 +693,7 @@
             text-align: center;
             align-items: start;
             display: flex;
+            text-align: start;
             flex-direction:column;
         }
 
@@ -748,6 +759,8 @@
             max-width: 30px;
             display: inline-block;
             transition: transform 0.3s ease;
+            position: relative;
+            top: -5px;
         }
 
         .linkedin-icon:hover {
@@ -762,6 +775,15 @@
 
         .icon-div p{
             margin-left: 2vw
+        }
+
+        .footer-links{
+            margin-left: 2vw;
+            text-decoration: none;
+        }
+
+        .footer-links:hover{
+            text-decoration: none;
         }
 
         @media (max-width: 600px) {
@@ -842,6 +864,10 @@
             }
 
             /* Page 1 */
+            .section-1{
+                background-size:cover;
+            }
+
             .section-1 h1 {
                 font-size: 3rem;
                 line-height: 1;
@@ -1005,8 +1031,9 @@
             }
 
             .ipo-title{
-                text-align: start;
                 font-size: 2.7rem;
+                text-align: center;
+                padding-top:3vh;
             }
 
             .ipo-description{
@@ -1049,7 +1076,10 @@
             }
 
             /* Page 3 */
-            
+            .p3-section-1-title{
+                width:100%
+            }
+
             .p3-section-1{
                 height: auto;
                 padding: 3vh 0;
@@ -1089,6 +1119,40 @@
                 font-size:1.2rem;
                 padding: 0 1vw;
             }
+
+
+            .p3-section-2 {
+                flex-direction: column;
+                height: auto;
+                padding: 3vh 5vw; 
+                background-image: none;
+                text-align: center;
+            }
+
+            .section-text{
+                width: 100%;
+                padding-top:2vh;
+                padding-left: 0;
+                font-size: 1.5rem;
+                text-align: center;
+            }
+
+            .text-div-container{
+                width:100%;
+            }
+
+            .p3-section-2::after {
+                content: "";
+                display: block;
+                width: 100%;
+                height: auto;
+                background-image: url('assets/image_10.jpg');
+                background-size: contain;
+                background-size: 200%;
+                background-position: 95% center;
+                background-repeat: no-repeat;
+                min-height: 45vh;
+            }
             
             .bio-content{
                 width: 100%;
@@ -1104,11 +1168,6 @@
                 background-size: contain;
                 background-size: 150%;
                 background-position: 75% center;
-            }
-
-            .section-text{
-                text-align: left;
-                text-justify: auto; 
             }
 
             .team-photo {
@@ -1402,7 +1461,7 @@
         <!-- Section 2 -->
         <div class="section p3-section-2">
             <div style="display:flex; flex-direction: column; width:100%; height: 100%;">
-                <div style="width:50%; height: 100%; display: flex; justify-content: center;">
+                <div class="text-div-container">
                     <p class="section-text">
                         Avec des bureaux à Montréal et à Toronto, notre équipe est en contact avec des 
                         actionnaires du monde entier pour le compte de nos clients.
@@ -1554,8 +1613,8 @@
             <a href="https://www.linkedin.com/company/maisonbrison" target="_blank">
                 <img src="assets/linkedin_icon.svg" alt="LinkedIn" class="linkedin-icon">
             </a>
-            <p>Contact</p>
-            <p>Terms of use</p>
+            <a class="footer-links" href="mailto:info@maisonbrison.com">Contact</a>
+            <a class="footer-links" href="terms.html" target="_blank">Conditions d'utilisations</a>
         </div>
         <p>Copyright &copy; 2025 MaisonBrison Communications</p>
         <p>All Rights Reserved.</p>
