Contact buttons are functional now

--- a/fr.html
+++ b/fr.html
@@ -1338,7 +1338,9 @@
                     <h2>Rehaussez votre plan pour les marchés des capitaux!</h2>
                 </div>
                 <div style="height:50%; margin-top:3vh">
-                    <button class="button">Contactez MBC</button>
+                    <a href="mailto:info@maisonbrison.com">
+                        <button class="button">Contactez MBC</button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -1424,7 +1426,9 @@
                     </div>
                     <div class="call-to-action">
                         <h2>Découvrez comment nous pouvons vous aider à créer de la valeur durable sur les marchés des capitaux !</h2>
-                        <button class="button">Contactez MBC</button>
+                        <a href="mailto:info@maisonbrison.com">
+                            <button class="button">Contactez MBC</button>
+                        </a>
                     </div>
                 </div>
             </div>
