--- a/index.html
+++ b/index.html
@@ -1318,7 +1318,9 @@
                     <h2>Elevate Your Capital Markets Plan!</h2>
                 </div>
                 <div style="height:50%; margin-top:3vh">
-                    <button class="button">Contact MBC</button>
+                    <a href="mailto:info@maisonbrison.com">
+                        <button class="button">Contact MBC</button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -1401,7 +1403,9 @@
                     </div>
                     <div class="call-to-action">
                         <h2>Learn How We Can Help You Build Lasting Value in the Capital Markets!</h2>
-                        <button class="button">Contact MBC</button>
+                        <a href="mailto:info@maisonbrison.com">
+                            <button class="button">Contact MBC</button>
+                        </a>
                     </div>
                 </div>
             </div>
