--- a/fr.html
+++ b/fr.html
@@ -683,6 +683,43 @@
             display: block;
         }
 
+        .p3-section-4 {
+            background-image: url('assets/image_11.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-color: #74ccd4;
+            color: #003853;
+            height: 50vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 5vh;
+            position: relative;
+        }
+
+        .filler{
+            width: 50%;
+        }
+
+        .section-4-content {
+            width: 50%;
+            font-size: 1.5em;
+            display:flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        .section-4-content h2 {
+            font-weight: bold;
+            margin-bottom: 20px;
+            text-transform: none;
+            text-align: start;
+            width:90%;
+        }
+
         footer {
             position: relative;
             width: 100%;
@@ -1175,6 +1212,40 @@
                 height: 20vw;
             }
 
+            .p3-section-4 {
+                background-image: none;
+                height: auto;
+                flex-direction: column;
+                padding: 5vh 5vw;
+            }
+
+            .p3-section-4::before {
+                content: "";
+                display: block;
+                width: 100%;
+                height: auto;
+                background: url('assets/image_11.jpg') no-repeat center;
+                background-size: contain;
+                background-size: 300%;
+                background-position: 15% center;
+                min-height: 45vh;
+            }
+
+            .filler{
+                display: none;
+            }
+
+            .section-4-content {
+                width: 100%;
+                font-size: 1.2em;
+                text-align: center;
+                margin-top: 20px;
+            }
+
+            .section-4-content h2{
+                text-align: center;
+            }
+
             .divider{
                 margin: 4vh 0;
             }
@@ -1607,6 +1678,17 @@
                 <div style="display: flex; justify-content: center; width: 100%;">
                     <hr class="divider">
                 </div>
+            </div>
+        </div>
+
+         <!--Section 4-->
+         <div class="p3-section-4">
+            <div class="filler"></div>
+            <div class="section-4-content">
+                <h2>Découvrez comment faire de notre équipe un prolongement de la vôtre.</h2>
+                <a href="mailto:info@maisonbrison.com">
+                    <button class="button"> Contactez MBC </button>
+                </a>
             </div>
         </div>
     </div>
