Correction de text fr

--- a/fr.html
+++ b/fr.html
@@ -1265,7 +1265,7 @@
             <span></span>
         </div>
         <ul class="nav-links">
-            <li><a href="#">À-propos</a></li>
+            <li><a href="#">À propos</a></li>
             <li><a href="#">Expertise</a></li>
             <li><a href="#">Notre équipe</a></li>
         </ul> 
@@ -1377,7 +1377,7 @@
                  <p>
                     MBC compte des clients dans divers secteurs d’activité et à différents stades de développement
                     : des entreprises qui envisagent un premier appel public à l’épargne jusqu’à des sociétés mondiales dont le 
-                    chiffre d’affaires dépasse 8 milliards de dollars. Avec des bureaux à Montréal et à Toronto, nous 
+                    chiffre d’affaires s’élève à plus de 8 milliards de dollars. Avec des bureaux à Montréal et à Toronto, nous 
                     communiquons avec des actionnaires du monde entier pour le compte de nos clients. 
                     Notre équipe de professionnels expérimentés met au service des entreprises son savoir-faire éprouvé en 
                     les aidant à naviguer dans le paysage complexe des investisseurs, à renforcer leur crédibilité et à optimiser la valeur actionnariale.
@@ -1406,7 +1406,7 @@
             </div>
             <div class="contact-us-div">
                 <div class="contact-us-title">
-                    <h2>Rehaussez votre plan pour les marchés des capitaux!</h2>
+                    <h2>Propulsez votre stratégie sur les marchés des capitaux !</h2>
                 </div>
                 <div style="height:50%; margin-top:3vh">
                     <a href="mailto:info@maisonbrison.com">
@@ -1422,7 +1422,7 @@
         <!-- Section 1 -->
         <div class="section p2-section-1">
             <div class="p2-section-1-title">
-                <h2>Connecter les entreprises aux marchés de capitaux.</h2>
+                <h2>Connecter les entreprises aux marchés des capitaux.</h2>
                 <h2>Créer de la valeur grâce à l’expertise.</h2>
             </div>
             <div class="p2-section-1-div">
@@ -1432,15 +1432,15 @@
                 <div class="p2-section-1-text">
                     <p>
                         Que vous cherchiez à améliorer vos communications avec les actionnaires et à gérer
-                        les attentes du marché, à accroître la liquidité, à obtenir la couverture d’analystes 
-                        ou encore à préparer une entrée en bourse ou à réaliser une acquisition transformatrice, 
+                        les attentes du marché, à accroître la liquidité, à développer la couverture d’analystes 
+                        ou encore à préparer une introduction en bourse ou à réaliser une acquisition transformatrice, 
                         nous vous apportons un point de vue éclairé, les ressources et les contacts dont vous avez besoin pour réussir. 
                     </p>
                     <p>
                         Notre expertise s’appuie sur des décennies d’expérience auprès d’entreprises de divers 
                         secteurs d’activité et à différents stades de développement. Notre connaissance approfondie 
                         des marchés financiers canadiens et mondiaux permet à MBC d’offrir une gamme complète de services 
-                        et de fournir des renseignements plus judicieux à tous les stades du cycle d’une entreprise privée ou d’une société ouverte.  
+                        et de fournir des analyses plus judicieuses à tous les stades du cycle d’une entreprise privée ou d’une société ouverte.  
                     </p>
                         
                 </div>
@@ -1452,12 +1452,12 @@
             <div style="display:flex; flex-direction: row; padding:0px 20px; width:100%">
                 <div class="p2-section-2-left"></div>
                 <div class="p2-section-2-right">
-                    <h1 class="ipo-title">Entrées en bourse et fusions-acquisitions</h1>
+                    <h1 class="ipo-title">Introductions en bourse et fusions-acquisitions</h1>
                     <p class="ipo-description">
                         Les membres de notre équipe ont donné des conseils dans le cadre de 
-                        14 premiers appels publics à l’épargne pour des produits totaux de 2,2 milliards 
+                        14 introductions en bourse représentant des produits de 2,2 milliards 
                         de dollars, ainsi que dans le cadre d’opérations de fusions-acquisitions et d’émissions 
-                        secondaires pour un montant total de plus de 4,1 milliards de dollars.
+                        secondaires, totalisant plus de 4,1 milliards de dollars.
                     </p>
                 </div>
             </div>
@@ -1477,16 +1477,16 @@
                             <li>Élaboration de présentations à l’intention des investisseurs</li>
                             <li>Ciblage des investisseurs</li>
                             <li>Communication avec les analystes</li>
-                            <li>Rapports trimestriels</li>
-                            <li>Préparation de téléconférences de présentation des résultats </li>
+                            <li>Divulgation trimestriel </li>
+                            <li>Préparation de téléconférences de divulgation des résultats </li>
                             <li>Préparation de rapports pour les conseils d’administration</li>
                             <li>Rédaction de communiqués de presse</li>
                             <li>Traitement des demandes des investisseurs</li>
-                            <li>Soutien aux entrées en bourse</li>
+                            <li>Soutien aux introductions en bourse</li>
                             <li>Rédaction de prospectus</li>
                             <li>Communications relatives aux transactions</li>
                             <li>Préparation et coordination des tournées de présentations aux investisseurs</li>
-                            <li>Développement de sites Web pour les investisseurs</li>
+                            <li>Développement de sites Web à l’intention des investisseurs</li>
                             <li>Création de fiches d’information à l’intention des investisseurs</li>
                             <li>Préparation d’assemblées annuelles des actionnaires</li>
                             <li>Rapports ESG</li>
@@ -1519,13 +1519,12 @@
                 </div>
                 <div class="p3-section-1-text">
                     <p>
-                        Notre équipe dévouée aux marchés des capitaux est composée de professionnels qui ont notamment 
-                        œuvré comme analystes de maisons de courtage, banquiers, responsables des relations avec 
-                        les investisseurs et consultants au sein de grandes agences. Nos relations établies avec 
-                        les acteurs clés de la communauté des investisseurs procurent à nos clients un accès direct aux décideurs.
+                        Notre équipe dédiée de professionnels des marchés des capitaux est composée d’analystes 
+                        côté de la vente, de banquiers, de responsables des relations avec les investisseurs et de consultants au sein de grandes agences. Nos relations établies avec 
+                        des acteurs clés de la communauté des investisseurs procurent à nos clients un accès direct aux décideurs.
                     </p>
                     <p>
-                        Lorsque vous travaillez avec MBC, les membres séniors de notre équipe sont toujours votre principal 
+                        Lorsque vous faites appel à MBC, les membres séniors de notre équipe sont toujours votre principal 
                         point de contact. Vous avez également accès à notre personnel de soutien multidisciplinaire qui 
                         comprend des analystes, des concepteurs graphiques, des coordonnateurs d’événements et des traducteurs.  
                     </p>
@@ -1702,8 +1701,8 @@
             <a class="footer-links" href="mailto:info@maisonbrison.com">Contact</a>
             <a class="footer-links" href="terms.html" target="_blank">Conditions d'utilisations</a>
         </div>
-        <p>Copyright &copy; 2025 MaisonBrison Communications</p>
-        <p>All Rights Reserved.</p>
+        <p>Droit d’auteur &copy; 2025 MaisonBrison Communications</p>
+        <p>Tous droits réservés</p>
     </footer>
 </body>
 </html>
