--- a/fr.html
+++ b/fr.html
@@ -1590,7 +1590,7 @@
                             Martin est un praticien chevronné dans les domaines de la recherche en 
                             placement et de l’analyse financière. Il apporte des connaissances 
                             spécialisées et une clarté constante aux communications financières 
-                            des clients de MaisonBrison. Au cours de sa carrière, Martin a étudié 
+                            des clients de MBC. Au cours de sa carrière, Martin a étudié 
                             le processus décisionnel des entreprises et le comportement des marchés. 
                             Il a occupé pendant treize ans différents postes liés à la recherche et 
                             l’analyse, dont neuf à titre d’analyste en situations spéciales à la 
@@ -1654,7 +1654,7 @@
                 <div style="display:flex; justify-content: center;">
                     <div class="bio-content" id="vance-bio">
                         <p>
-                            Vance s’est joint à MaisonBrison en 2021. Il est un cadre talentueux 
+                            Vance s’est joint à MBC en 2021. Il est un gestionnaire aguerri 
                             qui possède une vaste expérience des relations avec les investisseurs 
                             (« RI »). Vance a passé plus de deux décennies à mettre en œuvre des 
                             plans de RI dotés d’objectifs mesurables, ainsi qu’à conseiller des 
