--- a/index.html
+++ b/index.html
@@ -1336,7 +1336,7 @@
          <!-- Section 1 -->
          <div class="section section-1 text-center">
                  <h1>Trusted Partners</h1>
-                 <h3>in the Capital Markets</h3>
+                 <h3>in Capital Markets</h3>
          </div>
      
          <!-- Section 2 -->
@@ -1416,8 +1416,8 @@
                         we provide the insights, bench strength, and connections you need to succeed. 
                     </p>
                     <p>
-                        Our expertise leverage decades of experience working with companies across several industries
-                        and various business stages. Our in-depth knowledge of the Canadian and global financial markets
+                        Our expertise leverages decades of experience working with companies across several industries
+                        and various business stages. Our in-depth  knowledge of Canadian and global financial markets
                         enables MBC to provide a comprehensive service offering and deliver smarter insights across the
                         private and public company lifecycles. 
                     </p>
@@ -1498,7 +1498,7 @@
                     <p>
                         Our dedicated team of capital markets professionals includes former sell-side analysts, bankers, 
                         investor relations officers, and big agency consultants.
-                        Our established relationships with key players in the investment community provides our clients
+                        Our established relationships with key players in the investment community provide our clients
                         with access to the decision makers.
                     </p>
                     <p>
@@ -1560,7 +1560,7 @@
                     <div class="bio-content" id="martin-bio">
                         <p>
                             Martin is a seasoned practitioner in the fields of investment research and financial analysis. 
-                            He brings specialized insight and consistent clarity to the financial communications of MaisonBrison's clients.
+                            He brings specialized insight and consistent clarity to the financial communications of MBC's clients.
                             Throughout his career, Martin has studied corporate decision-making and market behaviour. 
                             He spent thirteen years in various positions related to research and analysis, including nine as Special Situations Analyst at National Bank
                             Financial in Montreal. As an analyst he identified growth-oriented companies at an early stage of their evolution,
@@ -1610,7 +1610,7 @@
                 <div style="display:flex; justify-content: center;">
                     <div class="bio-content" id="vance-bio">
                         <p>
-                            Vance joined MaisonBrison in 2021. He is a skilled executive with significant experience in investor 
+                            Vance joined MBC in 2021. He is a skilled executive with significant experience in investor 
                             relations. Vance has spent more than two decades executing investor relations plans with measurable 
                             goals, as well as advising management teams on strategic IR decisions. He also has managed communications 
                             with financial analysts and institutional investors, striving to have public companies fairly valued by the Street. 
