--- a/fr.html
+++ b/fr.html
@@ -1699,7 +1699,7 @@
                 <img src="assets/linkedin_icon.svg" alt="LinkedIn" class="linkedin-icon">
             </a>
             <a class="footer-links" href="mailto:info@maisonbrison.com">Contact</a>
-            <a class="footer-links" href="terms.html" target="_blank">Conditions d'utilisations</a>
+            <a class="footer-links" href="terms_fr.html" target="_blank">Conditions d'utilisations</a>
         </div>
         <p>Droit d’auteur &copy; 2025 MaisonBrison Communications</p>
         <p>Tous droits réservés</p>
