text alignment corrected

--- a/index.html
+++ b/index.html
@@ -200,8 +200,7 @@
         }
 
         .section-2-text-div p{
-            text-align: justify;
-            text-justify: inter-word;
+            text-align: left;
         }
 
         .h2-style{
@@ -929,8 +928,6 @@
 
             .section-2-text-div p{
                 font-size: 1.2rem;
-                text-align: justify;
-                text-justify: inter-word; 
             }
 
             .h2-style{
