--- a/fr.html
+++ b/fr.html
@@ -200,8 +200,7 @@
         }
 
         .section-2-text-div p{
-            text-align: justify;
-            text-justify: inter-word;
+            text-align: left;
             font-size: 1.1rem;
         }
 
@@ -941,8 +940,6 @@
 
             .section-2-text-div p{
                 font-size: 1.2rem;
-                text-align: justify;
-                text-justify: inter-word; 
             }
 
             .h2-style{
