Fixed button alignment

--- a/fr.html
+++ b/fr.html
@@ -706,8 +706,8 @@
             width: 50%;
             font-size: 1.5em;
             display:flex;
-            justify-content: center;
-            align-items: center;
+            justify-content: start;
+            align-items: start;
             flex-direction: column;
         }
 
@@ -1405,7 +1405,7 @@
                 <div class="contact-us-title">
                     <h2>Propulsez votre stratégie sur les marchés des capitaux !</h2>
                 </div>
-                <div style="height:50%; margin-top:3vh">
+                <div style="height:50%; margin-top:3vh;">
                     <a href="mailto:info@maisonbrison.com">
                         <button class="button">Contactez MBC</button>
                     </a>
@@ -1682,9 +1682,11 @@
             <div class="filler"></div>
             <div class="section-4-content">
                 <h2>Découvrez comment faire de notre équipe un prolongement de la vôtre.</h2>
-                <a href="mailto:info@maisonbrison.com">
-                    <button class="button"> Contactez MBC </button>
-                </a>
+                <div style="display:flex; justify-content: flex-start; width: 100%;">
+                    <a href="mailto:info@maisonbrison.com">
+                        <button class="button"> Contactez MBC </button>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
