--- a/index.html
+++ b/index.html
@@ -702,8 +702,8 @@
             width: 50%;
             font-size: 1.5em;
             display:flex;
-            justify-content: center;
-            align-items: center;
+            justify-content: start;
+            align-items: start;
             flex-direction: column;
         }
 
@@ -1630,9 +1630,11 @@
             <div class="filler"></div>
             <div class="section-4-content">
                 <h2>Find out How to Make Our Team an Extension of Yours!</h2>
-                <a href="mailto:info@maisonbrison.com">
-                    <button class="button"> Contact MBC </button>
-                </a>
+                <div style="display:flex; justify-content: flex-start; width: 100%;">
+                    <a href="mailto:info@maisonbrison.com">
+                        <button class="button"> Contact MBC </button>
+                    </a>
+                </div>
             </div>
         </div>
         
